--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,13 +114,20 @@
 
 #our-department{
   min-height: 100vh;
+  /* max-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#media-department{
+  min-height: 100vh;
   max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#our-department > h1{
+#our-department > h1,#media-department > h1{
   text-align: center;
   padding: 40px;
 }
@@ -358,16 +365,14 @@
   margin: auto;
 }
 
-#avionics-member,#design-member{
-  /* height: 100vh; */
-  /* max-height: 100vh; */
+#avionics-member,#design-member,#media-member{
   max-width: 100vw;
   min-height: 100vh;
-  /* padding-bottom: 30px; */
 }
 
 #avionics-member > h1,
-#design-member > h1{
+#design-member > h1,
+#media-member > h1{
   padding: 30px;
   text-align: center;
 }
