--- a/assets/css/mediaQuery.css
+++ b/assets/css/mediaQuery.css
@@ -1,9 +1,23 @@
 /* @media only screen and (max-width: 1200px){
 
 } */
+@media only screen and (min-width: 1201px) and (max-width: 1400px){
+  #avioncis-intro{
+    flex-direction: column-reverse;
+  }
+  #avioncis-intro > img{
+    margin: auto;
+  }
+}
 
 @media only screen and (min-width: 1025px) and (max-width: 1200px){
-    #home-section > #date-counter > #counter{
+  #avioncis-intro{
+    flex-direction: column-reverse;
+  }
+  #avioncis-intro > img{
+    margin: auto;
+  }
+  #home-section > #date-counter > #counter{
         color: #fff;
         font-size: 4rem;
     }
@@ -267,6 +281,7 @@
     background: rgb(14, 13, 13);
     width: 100vw;
     margin-left: 0;
+    z-index: 9999;
   }
 
   .navbar-nav .nav-link{
@@ -400,10 +415,11 @@
   #avioncis-intro > img{
     width: 60%;
     height: 200px;
-    /* height: 20%; */
     margin: 0;
     margin: auto;
     margin-top: 0;
+    z-index: -999;
+
   }
   #avionics-member{
     margin-top: 50px;
@@ -509,6 +525,7 @@
       gap: 2rem;
       flex-wrap: wrap;
       justify-content: center;
+      z-index: -999;
     }
   
     .plane-box > .plane-img{
@@ -535,6 +552,10 @@
   #questions_and_ans{
     margin-top: 30px;
     width: 80%;
+  }
+
+  .further-info {
+    margin-left: 20px;
   }
 
 }
