--- a/assets/css/mediaQuery.css
+++ b/assets/css/mediaQuery.css
@@ -271,6 +271,11 @@
     /* height: 150px; */
     width: 250px;
   }
+  
+  #bank-details > #bank-det{
+    font-size: 1.2rem;
+    margin-top: 50px;
+  }
 
 
 }
@@ -544,6 +549,10 @@
     }
 
   /* Support.html */
+  #scanner-img{
+    width: 80%;
+  }
+  
   #scanner-img > img{
     width: 250px;
     height: 250px;
@@ -556,6 +565,22 @@
 
   .further-info {
     margin-left: 20px;
+  }
+
+  #support-details{
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #bank-details{
+    width: 80%;
+    margin-top: 50px;
+  }
+
+  #bank-details > #bank-det{
+    margin-top: 30px;
+    font-size: 1.2rem;
   }
 
 }
