--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,19 +388,32 @@
   /* height: 220px; */
   display: flex;
   flex-direction : column;
-  border: 5px solid var(--color);
+  /* border: 5px solid var(--color); */
+  border: 5px solid #fff;
   border-top-left-radius:25px;
   overflow: hidden;
   text-align: center;
 }
 
 .avionics-box > span{
+  display: block;
+  width: 100%;
   color: #fff;
+  background: #0A1D56;
+  padding: 10px 0;
 }
 
 .img-box{
   height: 200px;
   width: 200px;
+}
+
+.gajju-img{
+  height: 220px;
+}
+
+.edryn-img{
+  height: 220px;
 }
 
 .single-name{
@@ -532,6 +545,7 @@
   flex-direction: column;
   gap: 6rem;
   margin-bottom: 50px;
+  overflow: hidden;
 }
 
 .plane-box{
@@ -637,15 +651,59 @@
   margin: 20px 0;
 }
 
-#scanner-img{
-  width: 100%;
+#support-details{
+  display: flex;
+}
+
+#support-details > h3{
   text-align: center;
+}
+
+#scanner-img{
+  width: 50%;
+  text-align: center;
+}
+
+#upiId{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  font-size: 1.2rem;
+}
+
+#upiId > p{
+  margin: auto 10px;
+}
+
+#upiId > button{
+  font-size: 1.1rem;
+  padding:3px 15px;
+  background-color: var(--color);
+  color: #fff;
+  border-radius: 8px;
 }
 
 #scanner-img > img{
   height: 300px;
   width: 300px;
   margin-bottom: 30px;
+}
+
+#bank-details{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#bank-details > #bank-det{
+  font-size: 1.5rem;
+  margin-top: 50px;
+}
+
+#bank-details > h3{
+  text-align: center;
 }
 
 .support-btn{
